# DBMS_252_Nhom_3

./: .gitignore
project/: Dockerfile.nginx  README.md  docker-compose.yml
project/member1_indexing/: README.md
project/member1_indexing/backend/: main.py  requirements.txt  schemas.py
project/member1_indexing/frontend/: index.html  package-lock.json  package.json  vite.config.js
project/member2_query/: README.md
project/member2_query/backend/: main.py
project/member2_query/frontend/: index.html  package-lock.json  package.json  vite.config.js
project/member3_transaction/: README.md
project/member3_transaction/backend/: database.py  main.py  requirements.txt
project/member3_transaction/frontend/: index.html  package-lock.json  package.json  vite.config.js
project/member4_concurrency/: PLAN.md  README.md
project/member4_concurrency/backend/: Dockerfile  database.py  main.py  migrate.py  phenomena.py  pyproject.toml  redis_phenomena.py  workers.py
project/member4_concurrency/backend/migrations/: 001_init.sql
project/member4_concurrency/backend/routers/: admin.py  inspect.py  phenomena_pg.py  phenomena_redis.py  scenario.py
project/member4_concurrency/backend/strategies/: __init__.py  pg.py  redis_strategies.py
project/member4_concurrency/backend/tests/: conftest.py  test_admin.py  test_inspect.py  test_migration.py  test_phenomena_pg.py  test_phenomena_redis.py  test_scenario_runner.py
project/member4_concurrency/frontend/: index.html  package.json  (+2 more)
project/member5_backup/: README.md
project/nginx/: nginx.conf
project/portal/: index.html
(+41 files in other folders)
