[project]
name = "member4-concurrency-backend"
version = "0.1.0"
description = "Member 4 — Concurrency Control demo backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "redis[hiredis]>=5",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
